# oz_03_collabo-001-BE

./: .gitignore  Dockerfile  Dockerfile.dev  DockerfilePro  README.md  docker-compose-dev.yml  docker-compose-pro.yml  docker-compose.debug.yml  docker-compose.yml  nginx.conf  pyproject.toml
.github/ISSUE_TEMPLATE/: Bug.md  DocumentationImprovement.md  FeatureRequest.md  OtherTemplate.md  Question.md
.github/workflows/: deploy.yml  formatter.yml
babydog/: pyproject.toml
django/: delete_migrations.sh  manage.py  run.sh
django/authentication/: custom_authentication.py
django/common/: admin.py  models.py  serializers.py
django/common/management/commands/: create_dumy_data.py  create_dumy_data_comment.py  create_initial_data.py  create_superusers.py
django/config/: settings.py  urls.py
django/config/settings/: base.py  development.py  development_sqlite.py  product.py
django/places/: admin.py  apps.py  models.py  serializers.py  signals.py  urls.py  utils.py  views.py
django/users/: adapters.py  admin.py  forms.py  models.py  serializers.py  urls.py
django/users/migrations/: 0001_initial.py  0002_alter_customuser_nickname.py  0003_alter_customuser_nickname.py  0004_alter_customuser_nickname.py  0005_alter_customuser_managers_alter_customuser_nickname.py  0006_alter_customuser_options_and_more.py  0007_customuser_created_at_customuser_is_staff_and_more.py  0008_customuser_groups_customuser_is_superuser_and_more.py
django/users/views/: google_auth_view.py  kakao_auth_view.py  mypage_views.py  naver_auth_view.py  user_auth_view.py
images/: swagger.html
